--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^8.1.0",
     "critters": "^0.0.23",
     "framer-motion": "^12.15.0",
     "i18next": "^25.2.1",
