--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@tsparticles/engine": "^3.9.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "critters": "^0.0.23",
     "framer-motion": "^12.15.0",
     "i18next": "^25.2.1",
@@ -18,7 +23,8 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-i18next": "^15.5.2"
+    "react-i18next": "^15.5.2",
+    "tailwind-merge": "^3.3.1"
   },
   "browserslist": [
     "defaults",
@@ -36,6 +42,7 @@
     "eslint-config-next": "15.3.2",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.7",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
