--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.5.2",
-    "tailwind-merge": "^3.3.1"
+    "resend": "^6.5.2",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.13"
   },
   "browserslist": [
     "defaults",
